Fix reflection